--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foodpacker.ca/mobile",
+  "name": "mobile.foodpacker.ca",
   "version": "0.0.1",
   "description": "Mobile site of foodpacker.ca",
   "main": "server.js",
